# pims

./: .gitignore  README.md
new/pims_new/: README.md  pyproject.toml
new/pims_new/pims_datamanagement/: .gitignore  USAGE_GUIDE.md  create_fixtures.py  manage.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  verify_fixtures.py
new/pims_new/pims_datamanagement/audit_log/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
new/pims_new/pims_datamanagement/core/: constants.py  types.py
new/pims_new/pims_datamanagement/docs/: README.md
new/pims_new/pims_datamanagement/document_management/: admin.py  delete_view.py  forms.py  models.py  permissions.py  report_views.py  reports.py  tasks.py  tests.py  tests_approval_workflow.py  tests_priority_retention.py  urls.py  utils.py  views.py
new/pims_new/pims_datamanagement/fixtures/: initial_data.json
new/pims_new/pims_datamanagement/notifications/: admin.py  context_processors.py  models.py  tests_notifications.py  urls.py  utils.py  views.py
new/pims_new/pims_datamanagement/organization/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
new/pims_new/pims_datamanagement/pims_datamanagement/: asgi.py  celery.py  settings.py  unfold_config.py  urls.py  views.py  wsgi.py
new/pims_new/pims_datamanagement/templates/: _sidebar.html  base.html  base_empty.html  base_header.html  base_no_sidebar.html  dashboard.html  header.html  home.html
new/pims_new/pims_datamanagement/user_management/: admin.py  apps.py  backends.py  forms.py  middleware.py  models.py  (+5 more)
(+335 files in other folders)
