[project]
name = "pims-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "psycopg2-binary",
    "django-otp",
    "django-phonenumber-field",
    "phonenumbers",
    "twilio",
    "django-axes",
    "qrcode>=8.2",
    "django-widget-tweaks>=1.5.0",
]
